# jg.github.io

./: README.md  gitignore  model.pkl  pyproject.toml
src/: app.py  model.py
