[tool.poetry]
name = "nameofproject"
version = "0.1.0"
description = "This is the first test for work on git."
authors = ["juangonzalez <juank.gonzalezr1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
pandas = "^2.2.3"
scikit-learn = "^1.0.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.0"
joblib = "^1.1.0"
streamlit = "1.12.0"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
